Release history for Dist-Zilla-Util-BundleInfo

{{$NEXT}}

1.000000 2014-06-02T02:30:43Z
 [01 MAJOR]
 - Mostly packaging changes that will predominantly be significant for non-CPAN toolchains.

 [02 Migrated to EUMM]
 - ExtUtils::MakeMaker is now the installer of choice.
 - "Latest" dependencies moved to only recommends instead of requires.

 [03 New Version Scheme]
 - Moving from v-versions (x.y.z) to reals (x.yyyzzz)
 - This is the primary reason for the 1.x on the box.

 [Dependencies::Stats]
 - Dependencies changed since 0.1.3, see Changes.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +42 ↑1 -2 (recommends: -1, suggests: +1 -1)
 - runtime: +1 ↓1
 - test: +5 ↓1 -3 (recommends: +4)

0.1.3 2013-09-25T18:02:50Z
 [Bugfix]
 - Update Test::Compile to work on Win32

 [Dependencies::Stats]
 - Dependencies changed since 0.1.2, see Changes.deps* for details
 - test: +1

0.1.2 2013-08-31T03:20:53Z
 [!Minor]
 - Excise old Test::Compile

 [Dependencies::Stats]
 - Dependencies changed since 0.1.1, see Changes.deps* for details
 - develop: +1 (suggests: ↑1)
 - test: +2 -2

0.1.1 2013-08-01T17:20:02Z
 [Dependencies::Stats]
 - Dependencies changed since 0.1.0, see Changes.deps* for details
 - build: ↑1
 - configure: ↑1
 - test: +2 -2

 [Documentation]
 - Add MetaPOD annotations

0.1.0 2013-08-01T12:20:06Z
 - First version.
