@@ -1,4 +1,6 @@
-1.000000
+1.001000
+
+1.000000 2014-06-02T02:30:43Z
  [Added / configure requires]
  - ExtUtils::MakeMaker 6.30
 
