@@ -1,6 +1,8 @@
 Release history for Dist-Zilla-Util-BundleInfo
 
 {{$NEXT}}
+ [01 Plugin::payload_list]
+ - New function returns payload contents in list form with MVP checked arity.
 
 1.000000 2014-06-02T02:30:43Z
  [01 MAJOR]
